--- a/_less/hero.less
+++ b/_less/hero.less
@@ -11,4 +11,5 @@
     }
     max-height: 100%;
     max-width: 100%;
+    height: 100%;
 }
