--- a/_less/main.less
+++ b/_less/main.less
@@ -18,8 +18,13 @@
 @shortener-height: 120px;
 @shortener-padding: 20px;
 
+html {
+    height: 100%;
+}
+
 body {
     width: @shortener-width;
+    height: 100%;
     margin: 0 auto;
     font-family: 'Oswald', sans-serif;
 }
